[gd_scene load_steps=6 format=2]

[ext_resource path="res://mainCharacterController/player control_JL.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game_DO.gd" type="Script" id=2]

[sub_resource type="CylinderShape" id=1]
radius = 0.934206
height = 1.41221

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/raidercrusaderchrome.ttf"

[sub_resource type="DynamicFont" id=3]
size = 25
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[node name="Game" type="Spatial"]
script = ExtResource( 2 )

[node name="player" parent="." instance=ExtResource( 1 )]

[node name="Area" type="Area" parent="player"]

[node name="CollisionShape" type="CollisionShape" parent="player/Area"]
transform = Transform( 0.579956, 0, 0, 0, 1, 0, 0, 0, 0.466401, 0, 0.998992, 0 )
shape = SubResource( 1 )

[node name="Level" type="Spatial" parent="."]

[node name="LevelTimer" type="Timer" parent="."]

[node name="NPCMoveTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="TextShoutTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="TextShout" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -502.03
margin_top = 86.5294
margin_right = 506.97
margin_bottom = 194.529
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextHint" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 1.0
margin_left = -91.0
margin_top = 545.0
margin_right = -30.0
margin_bottom = 579.0
custom_fonts/font = SubResource( 3 )
text = "Hint: Placeholder!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="player/Area" to="." method="_on_Area_switchLevel_entered"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="timeout" from="NPCMoveTimer" to="." method="_on_NPCMoveTimer_timeout"]
[connection signal="timeout" from="TextShoutTimer" to="." method="clearTextShout"]
